syntax = "proto3";

import "google/protobuf/timestamp.proto";

package admin;
option go_package = "shgpu-table/grpc/admin";

service Admin {
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
  rpc Refresh(RefreshRequest) returns (RefreshResponse) {}
  rpc Logout(LogoutRequest) returns (LogoutResponse) {}
  rpc AddAdvertisingMessage(AddAdvertisingMessageRequest) returns (AddAdvertisingMessageResponse) {}
  rpc RemoveAdvertisingMessage(RemoveAdvertisingMessageRequest) returns (RemoveAdvertisingMessageResponse) {}
  rpc ChangeAdvertisingMessage(ChangeAdvertisingMessageRequest) returns (ChangeAdvertisingMessageResponse) {}
  rpc GetAdvertisingMessages(GetAdvertisingMessagesRequest) returns (GetAdvertisingMessagesResponse) {}
}

message AddAdvertisingMessageRequest {
  repeated int32 faculties = 1;
  int32 adminId = 2;
  string text = 3;
  optional int32 totalCount = 4; 
  google.protobuf.Timestamp sendDate = 5;
}

message AddAdvertisingMessageResponse {
  int32 id = 1;
}

message RemoveAdvertisingMessageRequest {
  int32 advertisingId = 1;
}

message RemoveAdvertisingMessageResponse {
  int32 removedCount = 1;
}

message ChangeAdvertisingMessageRequest {
  int32 advertisingId = 1;
  repeated int32 faculties = 2;
  int32 adminId = 3;
  string text = 4;
  optional int32 totalCount = 5; 
  google.protobuf.Timestamp sendDate = 6;
}

message ChangeAdvertisingMessageResponse {
  int32 advertisingId = 1;
  repeated int32 faculties = 2;
  int32 adminId = 3;
  string text = 4;
  optional int32 totalCount = 5; 
  google.protobuf.Timestamp sendDate = 6;
}

message GetAdvertisingMessagesRequest {

}

message GetAdvertisingMessagesResponse{

}

message GetAdvertisingMessageRequest {

}

message GetAdvertisingMessageResponse {

}

message CreateRequest {
  string name = 1;
  string pass = 2;
}

message CreateResponse {
  string name = 1;
  string pass = 2;
  string refreshToken = 3;
  string accessToken = 4;
  uint32 id = 5;
  string error = 6;
}

message ValidateRequest {
  string name = 1;
  string pass = 2;
}

message ValidateResponse {
  string name = 1;
  uint32 id = 2;
  string refreshToken = 3;
  string accessToken = 4;
  string error = 6;
}

message RefreshRequest {
  string refreshToken = 1;
}

message RefreshResponse {
  string refreshToken = 1;
  string accessToken = 2;
}

message LogoutRequest {
  string refreshToken = 1;
}

message LogoutResponse {}